payment order and inventory sync